syntax = "proto3";

package sum;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message Sum {
    int32 first_arg = 1;
    int32 second_arg = 2;
}

message SumRequest {
    Sum sum = 1;
}

message SumResponse {
    int32 result = 1;
}

message PrimeNumberDecompositionRequest {
    int32 number = 1;
}

message PrimeNumberDecompositionResponse {
    int32 prime_factor = 1;
}

service SumService {
    // Unary
    rpc Sum(SumRequest) returns (SumResponse) {};

    // Server streaming
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
}
